Remove files containing API keys

--- a/.gitignore
+++ b/.gitignore
@@ -54,4 +54,5 @@ dev-debug.log
 *.njsproj
 *.sln
 *.sw?
-# OS specific
+# OS specific_txts/docs-amplemarket-com/llms-full.txt
+_txts/docs-servicestack-net/llms-full.txt
