--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/[your-username]/llms-txt-library.git"
+    "url": "git+https://github.com/AlexJanow/contextCacheLlmsTxt.git"
   },
   "keywords": [
     "llms",
@@ -21,7 +21,7 @@
     "documentation",
     "static-site"
   ],
-  "author": "Your Name",
+  "author": "Alex Janow",
   "license": "MIT",
   "dependencies": {
     "cheerio": "^1.0.0-rc.12",
@@ -34,7 +34,7 @@
     "doc": "docs"
   },
   "bugs": {
-    "url": "https://github.com/[your-username]/llms-txt-library/issues"
+    "url": "https://github.com/AlexJanow/contextCacheLlmsTxt/issues"
   },
-  "homepage": "https://github.com/[your-username]/llms-txt-library#readme"
+  "homepage": "https://github.com/AlexJanow/contextCacheLlmsTxt#readme"
 }
